Поправил отступы, сделал список из карточек
не ругайся особенно, валидатор в этот раз на моей стороне

--- a/catalog.html
+++ b/catalog.html
@@ -123,13 +123,13 @@
           <p>Сортировать</p>
           <ul>
             <li>
-              <a href="#nowhere">по цене</a>
+              <a href="#price">по цене</a>
             </li>
             <li>
-              <a href="#nowhere">по типу</a>
+              <a href="#type">по типу</a>
             </li>
             <li>
-              <a href="#nowhere">по названию</a>
+              <a href="#name">по названию</a>
             </li>
           </ul>
           <ul>
@@ -141,123 +141,98 @@
             </li>
           </ul>
         </div>
-        <div>
-
-          <ul>
-            <li>
+        <ul>
+          <li>
+            <article>
               <a href="#nowhere">
-                <img src="https://via.placeholder.com/358x347" width="358" height="347" alt="седона">
+                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="седона">
               </a>
-            </li>
-          </ul>
-
-          <article>
-            <a href="#nowhere">
-              <h2>SEDONA</h2>
-            </a>
-            <p>Информационный сайт  для туристов</p>
-              <a href="#nowhere">9 900 &#8381;</a>
-          </article>
-
-          <ul>
-            <li>
+              <div>
+                <a href="#nowhere">
+                  <h3>SEDONA</h3>
+                </a>
+                <p>Информационный сайт  для туристов</p>
+                  <a href="#nowhere">9 900 &#8381;</a>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article>
               <a href="#nowhere">
                 <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт пинк">
               </a>
-            </li>
-          </ul>
-
-          <article>
-            <a href="#nowhere">
-              <h2>Pink App</h2>
-            </a>
-            <p>Продуктовый лендинг приложения для iOS и Android</p>
-              <a href="#nowhere">9 900 &#8381;</a>
-          </article>
-
-          <ul>
-            <li>
+              <div>
+                <h3>Pink App</h3>
+                <p>Продуктовый лендинг приложения для iOS и Android</p>
+                  <a href="#nowhere">9 900 &#8381;</a>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article>
               <a href="#nowhere">
                 <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт бородинский">
               </a>
-            </li>
-          </ul>
-
-          <article>
-            <a href="#nowhere">
-              <h2>Barbershop</h2>
-            </a>
-            <p>Сайт салона красоты. Для мужчин, да.</p>
-              <a href="#nowhere">9 900 &#8381;</a>
-          </article>
-
-          <ul>
-            <li>
+              <div>
+                <h3>Barbershop</h3>
+                <p>Сайт салона красоты. Для мужчин, да.</p>
+                  <a href="#nowhere">9 900 &#8381;</a>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article>
               <a href="#nowhere">
                 <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт вязаных игрушек">
               </a>
-            </li>
-          </ul>
-
-          <article>
-            <a href="#nowhere">
-              <h2>MISHKA</h2>
-            </a>
-            <p>Интернет-магазин  вязаных игрушек</p>
-              <a href="#nowhere">9 900 &#8381;</a>
-          </article>
-
-          <ul>
-            <li>
+              <div>
+                <h3>Mishka</h3>
+                <p>Интернет-магазин  вязаных игрушек</p>
+                  <a href="#nowhere">9 900 &#8381;</a>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article>
               <a href="#nowhere">
                 <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт A Plus">
               </a>
-            </li>
-          </ul>
-
-          <article>
-            <a href="#nowhere">
-              <h2>A Plus</h2>
-            </a>
-            <p>Лендинг курсов повышения квалификации</p>
-            <a href="#nowhere">9 900 &#8381;</a>
-          </article>
-
-          <ul>
-            <li>
+              <div>
+                <h3>A Plus</h3>
+                <p>Лендинг курсов повышения квалификации</p>
+                  <a href="#nowhere">9 900 &#8381;</a>
+              </div>
+            </article>
+          </li>
+          <li>
+            <article>
               <a href="#nowhere">
                 <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт кваст">
               </a>
+              <div>
+                <h3>Кваст</h3>
+                <p>Промо-сайт производителя крафтового кваса</p>
+                  <a href="#nowhere">9 900 &#8381;</a>
+              </div>
+            </article>
+          </li>
+        </ul>
+        <div>
+          <ul class="pagination">
+            <li class="page-item">
+              <a class="page-link">1</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="#2">2</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="#3">3</a>
+            </li>
+            <li class="page-item">
+              <a class="page-link" href="#next" aria-label="Следующая">Следующая</a>
             </li>
           </ul>
-
-          <article>
-            <a href="#nowhere">
-              <h2>КВАСТ</h2>
-            </a>
-            <p>Промо-сайт производителя крафтового кваса</p>
-              <a href="#nowhere">9 900 &#8381;</a>
-          </article>
-
         </div>
-
-          <div>
-            <ul class="pagination">
-              <li class="page-item">
-                <a class="page-link">1</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#nowhere">2</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#nowhere">3</a>
-              </li>
-              <li class="page-item">
-                <a class="page-link" href="#nowhere" aria-label="Следующая">Следующая</a>
-              </li>
-            </ul>
-          </div>
-
       </section>
     </main>
     <footer class="main-footer">
