добавляет картинки и фавиконки

--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header class="main-header">
       <nav>
         <a>
-          <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс">
+          <img src="img/svg/nerds-logo.svg" width="159" height="65" alt="Логотип интернет магазина Нёрдс">
         </a>
         <ul>
         <li>
@@ -41,7 +45,7 @@
             <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
             <a href="#nowhere">Узнать больше</a>
             <div>
-              <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="первый слайд">
+              <img src="img/slider/nerds-index-slide1.png" width="760" height="431" alt="первый слайд">
             </div>
           </li>
           <li>
@@ -49,7 +53,7 @@
             <p>Никакого креатива, только математические формулы для расчета идеальных пропорций</p>
             <a href="#nowhere">Узнать больше</a>
             <div>
-              <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="второй слайд">
+              <img src="img/slider/nerds-index-slide2.png" width="760" height="431" alt="второй слайд">
             </div>
           </li>
           <li>
@@ -57,7 +61,7 @@
             <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
             <a href="#nowhere">Узнать больше</a>
             <div>
-              <img src="https://via.placeholder.com/760x431" width="760" height="431" alt="третий слайд">
+              <img src="img/slider/nerds-index-slide3.png" width="760" height="431" alt="третий слайд">
             </div>
           </li>
         </ul>
@@ -69,7 +73,7 @@
           <ul>
             <li>
               <div>
-                <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация монитора">
+                <img src="img/offer/illustration-1.png" width="300" height="146" alt="иллюстрация монитора">
              </div>
              <h3>Веб-сайты</h3>
              <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
@@ -77,7 +81,7 @@
             </li>
             <li>
               <div>
-                <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация смартфона">
+                <img src="img/offer/illustration-2.png" width="300" height="146" alt="иллюстрация смартфона">
               </div>
               <h3>Приложения</h3>
               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
@@ -85,7 +89,7 @@
             </li>
             <li>
               <div>
-                <img src="https://via.placeholder.com/300x146" width="300" height="146" alt="иллюстрация доски">
+                <img src="img/offer/illustration-3.png" width="300" height="146" alt="иллюстрация доски">
               </div>
               <h3>Презентации</h3>
               <p>Вы даже не подозреваете, насколько вы изумительны!</p>
@@ -106,7 +110,7 @@
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
         <div>
-          <img src="https://via.placeholder.com/360x208" width="360" height="208" alt="иллюстрация логотип">
+          <img src="img/nerds-illustration.png" width="360" height="208" alt="иллюстрация логотип">
         </div>
 
         <table>
@@ -129,22 +133,22 @@
         <ul>
           <li>
             <a href="#nowhere">
-              <img src="https://via.placeholder.com/199x68" width="199" height="68" alt="htmlacademy">
+              <img src="img/company/logo-academy.png" width="199" height="68" alt="htmlacademy">
             </a>
           </li>
           <li>
             <a href="#nowhere">
-              <img src="https://via.placeholder.com/209x90" width="209" height="90" alt="borodinski">
+              <img src="img/company/logo-borodinski.png" width="209" height="90" alt="borodinski">
             </a>
           </li>
           <li>
             <a href="#nowhere">
-              <img src="https://via.placeholder.com/185x52" width="185" height="52" alt="pink">
+              <img src="img/company/logo-pink.png" width="185" height="52" alt="pink">
             </a>
           </li>
           <li>
             <a href="#nowhere">
-              <img src="https://via.placeholder.com/173x84" width="173" height="84" alt="MISHKA">
+              <img src="img/company/logo-mishka.png" width="173" height="84" alt="MISHKA">
             </a>
           </li>
         </ul>
@@ -153,9 +157,8 @@
 
     <footer class="main-footer">
       <div>
-
         <div>
-          <img src="https://via.placeholder.com/1440x416" width="1440" height="416" alt="карта">
+          <img src="img/map-marker.png" width="1440" height="416" alt="карта">
         </div>
         <div>
           <p>NЁRDS DESIGN STUDIO</p>
@@ -166,9 +169,15 @@
       </div>
 
       <div>
-        <a href="#nowhere" aria-label="вконтакте"></a>
-        <a href="#nowhere" aria-label="фейсбук"></a>
-        <a href="#nowhere" aria-label="инстаграмм"></a>
+        <a href="#nowhere" aria-label="вконтакте">
+          <svg width="27" height="15" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path d="M16.14 11.51c.95-.3 2.18 2.04 3.48 2.94.98.68 1.73.53 1.73.53l3.47-.05s1.82-.1.96-1.55c-.07-.12-.5-1.07-2.59-3.02-2.17-2.05-1.88-1.71.74-5.25 1.6-2.15 2.24-3.46 2.04-4.02-.2-.54-1.37-.4-1.37-.4L20.7.7c-.38 0-.7.12-.85.52 0 0-.62 1.66-1.45 3.08-1.74 2.99-2.43 3.15-2.72 2.96-.66-.43-.5-1.74-.5-2.67 0-2.9.44-4.1-.84-4.41A6.6 6.6 0 0012.5 0c-1.39-.03-2.57 0-3.24.32-.45.23-.79.72-.58.74.26.04.84.16 1.15.59.4.55.4 1.79.4 1.79s.22 3.41-.55 3.83c-.53.3-1.25-.3-2.8-3.01-.8-1.4-1.4-2.92-1.4-2.92s-.1-.29-.32-.45c-.25-.18-.6-.24-.6-.24L.85.68S.29.7.08.95c-.18.21-.01.66-.01.66s2.9 6.89 6.2 10.35c3.02 3.18 6.46 2.97 6.46 2.97h1.55s.47-.05.7-.31c.23-.24.22-.7.22-.7s-.03-2.1.94-2.41z" fill="#fff"/></svg>
+        </a>
+        <a href="#nowhere" aria-label="фейсбук">
+          <svg width="12" height="22" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/></svg>
+        </a>
+        <a href="#nowhere" aria-label="инстаграмм">
+          <svg width="21" height="21" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h15a3 3 0 013 3v15a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM3 18V9h1.18a6.5 6.5 0 1012.64 0H18v9H3zM14 7h4V3h-4v4z" fill="#fff"/></svg>
+        </a>
       </div>
 
       <p><strong>Давайте дружить, это выгодно!</strong></p>
