--- a/catalog.html
+++ b/catalog.html
@@ -3,12 +3,16 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="favicon/180.png">
+    <link rel="manifest" href="manifest.webmanifest">
   </head>
   <body>
     <header class="main-header">
       <nav>
         <a href="#nowhere">
-          <img src="https://via.placeholder.com/159x65" width="159" height="65" alt="Логотип интернет магазина Нёрдс">
+          <img src="img/svg/nerds-logo.svg" width="159" height="65" alt="Логотип интернет магазина Нёрдс">
         </a>
         <ul>
           <li>
@@ -134,10 +138,14 @@
           </ul>
           <ul>
             <li>
-              <a href="#down" aria-label="вниз"></a>
+              <a href="#down" aria-label="вниз">
+                <svg width="11" height="10" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 10L0 0h11" fill="#231F20"/></svg>
+              </a>
             </li>
             <li>
-              <a href="#up" aria-label="вверх"></a>
+              <a href="#up" aria-label="вверх">
+                <svg width="11" height="10" fill="DimGrey" stroke="DimGrey" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 0L0 10h11L5.5 0z" fill="#A6A6A6" opacity=".2"/></svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -145,21 +153,22 @@
           <li>
             <article>
               <a href="#nowhere">
-                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="седона">
+                <img src="img/catalog/sedona.png" width="358" height="578" alt="седона">
               </a>
               <div>
                 <a href="#nowhere">
                   <h3>SEDONA</h3>
                 </a>
                 <p>Информационный сайт  для туристов</p>
-                  <a href="#nowhere">9 900 &#8381;</a>
+                <a href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
           <li>
             <article>
+              <img src="img/svg/browser.svg" width="360" height="40" alt="browser">
               <a href="#nowhere">
-                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт пинк">
+                <img src="img/catalog/pink.png" width="358" height="578" alt="сайт пинк">
               </a>
               <div>
                 <h3>Pink App</h3>
@@ -170,49 +179,53 @@
           </li>
           <li>
             <article>
+              <img src="img/svg/browser.svg" width="360" height="40" alt="browser">
               <a href="#nowhere">
-                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт бородинский">
+                <img src="img/catalog/borodinski.png" width="358" height="578" alt="сайт бородинский">
               </a>
               <div>
                 <h3>Barbershop</h3>
                 <p>Сайт салона красоты. Для мужчин, да.</p>
-                  <a href="#nowhere">9 900 &#8381;</a>
+                <a href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
           <li>
             <article>
+              <img src="img/svg/browser.svg" width="360" height="40" alt="browser">
               <a href="#nowhere">
-                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт вязаных игрушек">
+                <img src="img/catalog/mishka.png" width="358" height="578" alt="сайт вязаных игрушек">
               </a>
               <div>
                 <h3>Mishka</h3>
                 <p>Интернет-магазин  вязаных игрушек</p>
-                  <a href="#nowhere">9 900 &#8381;</a>
+                <a href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
           <li>
             <article>
+              <img src="img/svg/browser.svg" width="360" height="40" alt="browser">
               <a href="#nowhere">
-                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт A Plus">
+                <img src="img/catalog/aplus.png" width="358" height="578" alt="сайт A Plus">
               </a>
               <div>
                 <h3>A Plus</h3>
                 <p>Лендинг курсов повышения квалификации</p>
-                  <a href="#nowhere">9 900 &#8381;</a>
+                <a href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
           <li>
             <article>
+              <img src="img/svg/browser.svg" width="360" height="40" alt="browser">
               <a href="#nowhere">
-                <img src="https://via.placeholder.com/358x578" width="358" height="578" alt="сайт кваст">
+                <img src="img/catalog/kvast.png" width="358" height="578" alt="сайт кваст">
               </a>
               <div>
                 <h3>Кваст</h3>
                 <p>Промо-сайт производителя крафтового кваса</p>
-                  <a href="#nowhere">9 900 &#8381;</a>
+                <a href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
@@ -229,7 +242,7 @@
               <a class="page-link" href="#3">3</a>
             </li>
             <li class="page-item">
-              <a class="page-link" href="#next" aria-label="Следующая">Следующая</a>
+              <a class="page-link" href="#next">Следующая</a>
             </li>
           </ul>
         </div>
@@ -238,7 +251,7 @@
     <footer class="main-footer">
       <div>
         <div>
-          <img src="https://via.placeholder.com/1440x416" width="1440" height="416" alt="карта">
+          <img src="img/map-marker.png" width="1440" height="416" alt="карта">
         </div>
         <div>
           <p>NЁRDS DESIGN STUDIO</p>
@@ -248,9 +261,15 @@
         </div>
       </div>
       <div>
-        <a href="#nowhere" aria-label="вконтакте"></a>
-        <a href="#nowhere" aria-label="фейсбук"></a>
-        <a href="#nowhere" aria-label="инстаграмм"></a>
+        <a href="#nowhere" aria-label="вконтакте">
+          <svg width="27" height="15" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path d="M16.14 11.51c.95-.3 2.18 2.04 3.48 2.94.98.68 1.73.53 1.73.53l3.47-.05s1.82-.1.96-1.55c-.07-.12-.5-1.07-2.59-3.02-2.17-2.05-1.88-1.71.74-5.25 1.6-2.15 2.24-3.46 2.04-4.02-.2-.54-1.37-.4-1.37-.4L20.7.7c-.38 0-.7.12-.85.52 0 0-.62 1.66-1.45 3.08-1.74 2.99-2.43 3.15-2.72 2.96-.66-.43-.5-1.74-.5-2.67 0-2.9.44-4.1-.84-4.41A6.6 6.6 0 0012.5 0c-1.39-.03-2.57 0-3.24.32-.45.23-.79.72-.58.74.26.04.84.16 1.15.59.4.55.4 1.79.4 1.79s.22 3.41-.55 3.83c-.53.3-1.25-.3-2.8-3.01-.8-1.4-1.4-2.92-1.4-2.92s-.1-.29-.32-.45c-.25-.18-.6-.24-.6-.24L.85.68S.29.7.08.95c-.18.21-.01.66-.01.66s2.9 6.89 6.2 10.35c3.02 3.18 6.46 2.97 6.46 2.97h1.55s.47-.05.7-.31c.23-.24.22-.7.22-.7s-.03-2.1.94-2.41z" fill="#fff"/></svg>
+        </a>
+        <a href="#nowhere" aria-label="фейсбук">
+          <svg width="12" height="22" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/></svg>
+        </a>
+        <a href="#nowhere" aria-label="инстаграмм">
+          <svg width="21" height="21" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h15a3 3 0 013 3v15a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM3 18V9h1.18a6.5 6.5 0 1012.64 0H18v9H3zM14 7h4V3h-4v4z" fill="#fff"/></svg>
+        </a>
       </div>
       <p><strong>Давайте дружить, это выгодно!</strong></p>
       <p>Скидка 10% для друзей из социальных сетей.</p>
