--- a/catalog.html
+++ b/catalog.html
@@ -1,62 +1,74 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link rel="stylesheet" href="css/normalize.css">
+<!--<link rel="stylesheet" href="css/style.css">-->
+
     <link rel="icon" href="favicon/favicon.ico">
     <link rel="icon" href="favicon/favicon.svg" type="image/svg+xml">
     <link rel="apple-touch-icon" href="favicon/180.png">
     <link rel="manifest" href="favicon/manifest.webmanifest">
+
   </head>
-  <body>
-    <header class="main-header">
-      <nav>
-        <a href="index.html">
-          <img src="img/svg/nerds-logo.svg" width="159" height="65" alt="Логотип интернет магазина Нёрдс">
+
+  <body class="page-body">
+
+    <header class="header">
+
+      <nav class="header-nav main-nav">
+        <a class="main-nav-logo" href="index.html">
+          <svg width="160" height="66" fill="black" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M48.03 24.78c3.65 3.98 11.62.38 9.03-4.92-1.72-3.55-4.31-2.73-6.16-1.82-3.7 1.78-4.4 5.05-2.87 6.74zM42.1 22c2.38 4.87-4.93 8.17-8.29 4.52-1.4-1.55-.75-4.56 2.64-6.19 1.7-.84 4.07-1.6 5.65 1.67zm115.84 28.37c-1.22.16-2.5.27-3.72.38h-.04v.06c-2.42 17.36-26.19 20.23-26.78 6.6-.27-6.17 11.6-7.95 23.4-9.1.2-5.4-3.57-4.19-8.15-2.71-4.82 1.54-10.53 3.38-13.46-1.88-5.02-9.03 14.63-17.94 16.73-16.1 6.35 5.56 3.48 6.59-1.2 8.26l-.18.07c-9.5 3.41-5.8 4.1-4.51 3.73 7.57-2.26 14.36-1.04 14.31 8.31l1.81-.13c.66-.04 1.3-.08 1.95-.14 2.3-.21 2.46 2.44-.16 2.65zm-7.52.76c-9.12 1.03-17.01 2.44-16.15 5.35 1.72 5.58 13.58 6.82 16.15-5.35zm-32.63-16.9c-.82 5.65-.8 11.65-.11 11.69.33.02 2.3-.35 2.94-1.5a34.8 34.8 0 001.77-4.28c1.2-3.25 2.5-6.8 4.5-7.82 2.83-1.45-8.1-5.04-9.1 1.91zm-88.9 28.44C20.95 68 14.65 66.83 16.66 51.82c1.45-10.9-.95-11.52-3.12-9.44-2.85 2.7-4.63 9.72-4.69 16.4.26 1.62.6 3.2 1 4.78.34 1.63-4.9 3.32-7.96 1.02C.83 63.79 0 55.87 0 45.13c0-8.82 1.17-14.9 2.23-15.17 8.03-2.2 9.31 1.34 7.58 7.98a47.64 47.64 0 00-1.4 7.92c1.68-4.66 4.08-8.48 6.81-10.17 7.42-4.67 13.6-2.47 12.44 6.8-2.01 16.58-2.18 18.83-.4 17.53 2.24-1.57 3.68 1.24 1.62 2.65zm12.88 2.47c5.4.62 11.04-1.07 13.21-4.55 1.84-2.92.34-3.94-1.78-1.58-4.46 5.12-9.1 2.82-11.04-2.35l.5-.17c9.42-3.77 15.33-14 11.6-19.79-5.13-7.98-21.2-.84-23.2 10.34-1.84 10.35 2.96 17.26 10.7 18.1zm-.4-11.97c5.86-4.16 7.81-13.32 6.2-15.9-1.73-2.7-5.08 1.51-6.25 11.74-.11 1.46-.11 2.87.06 4.16zm35.76-2.12c2.06-.67 4.36-2.55 5.96-5.06.45-.7.82-1.33 1.34-2.98-.06.2-.04.11.02-.11.1-.41.33-1.27.37-1.63 0-.05.06-.34.11-.45 1.23-6.85-3-10.73-8.87-7.81-3.28 1.63-7.35 7.81-9.8 14.5.6-3.6 1.66-7.03 2.84-10.4 2-5.96-1.73-9-8.14-7.25-1.06.28-3.02 8.1-3.02 16.92 0 10.73.56 16.91 1.62 17.7 3.07 2.36 8.53.62 7.97-.95-.21-.6-.37-1.2-.54-1.8l-.01-.06c0-.17 0-.34-.06-.5-1.06-6.97 3.01-16.64 6.36-19.22.89-.73 2.12-.23 2.28 1.68-2.73 1.35-3.62 3.71-3.62 4.72 0 2.76 2.79 3.43 5.19 2.7z" fill="#000"/><path fill-rule="evenodd" clip-rule="evenodd" d="M113.2 27.16c-.47 2.5-.85 5-1.1 7.53-1.07 10.06-.62 19 .6 22.99.73 2.13 3.46 4.94 6.08 2.02 2.85-3.2 5.97-1.35 2.18 2.42-2.34 2.3-6.7 3.88-11.04 3.43-3.13-.4-5.02-2.42-6.14-5.51a8.7 8.7 0 01-1.56 2.3c-2.11 2.2-4.68 3.43-7.97 3.1-6.64-.74-10.54-7.93-8.7-18.16 1.95-10.79 11.32-14.72 16.73-11.86l.33-4.1.06-.42.05-.42c-1.64.36-3.3.68-4.96.95-23.97 4-15.72-15.57-9.87-20.68 6.64-5.73 7.36-1.86 5.3-.56-3.68 2.36-5.3 15.9 5.24 15.9 1.73 0 3.35-.1 4.96-.28 3.3-18.32 13.28-27.2 21.36-24.28 8.98 3.26 8.03 17.54-11.54 25.63zm-10.92 24.4c-.22-3.55-.22-7.54-.17-11.64l.03-.78.03-.68c-3.35-1.52-6.64 3.65-7.48 10.79-.94 8.37 2.8 12.81 4.91 10.79 1.62-1.63 2.46-6.8 2.68-8.49zm24.08-43.17c-1.78-2.64-8.3.56-12.1 14.33 9.54-4.55 13.33-12.42 12.1-14.33z" fill="#000"/ alt="логотип магазина нердс"></svg>
         </a>
-        <ul>
-          <li>
-            <a href="#nowhere">Студия</a>
+        <ul class="main-nav-list">
+          <li class="main-nav-item">
+            <a class="main-nav-link" href="#nowhere">Студия</a>
           </li>
-          <li>
-            <a href="#nowhere">Клиенты</a>
+          <li class="main-nav-item">
+            <a class="main-nav-link" href="#nowhere">Клиенты</a>
           </li>
-          <li>
-            <a>Магазин</a>
+          <li class="main-nav-item">
+            <a class="main-nav-link">Магазин</a>
           </li>
-          <li>
-            <a href="#nowhere">Контакты</a>
+          <li class="main-nav-item">
+            <a class="main-nav-link" href="#nowhere">Контакты</a>
           </li>
         </ul>
-        <ul>
-          <li>
-            <a href="#nowhere">Корзина</a>
+        <ul class="header-basket basket">
+          <li class="basket-item">
+            <a class="basket-link" href="#nowhere">Корзина</a>
           </li>
         </ul>
       </nav>
+
     </header>
+
     <main>
-      <section>
-        <div>
+
+      <section class="main-content">
+        <div class="main-title">
           <h1>Магазин готовых шаблонов</h1>
         </div>
         <h2 class="visually-hidden">Фильтр шаблонов</h2>
         <form method="get" action="https://echo.htmlacademy.ru">
-          <fieldset>
-            <legend>Фильтр цены</legend>
+
+          <fieldset class="price">
+            <legend class="price-filter">Стоимость</legend>
             <ul>
-              <li>
-                <span>от</span>
-                <input type="number" placeholder="0" min="0" step="100" name="min_price">
+              <li class="price-min">
+                <span class="price-min-element">от</span>
+                <input class="price-min-input" type="number" placeholder="0" min="0" step="100" name="min-price">
               </li>
-              <li>
-                <span>до</span>
-                <input type="number" placeholder="15 000" max="15000" step="100" name="max_price">
+              <li class="price-max">
+                <span class="price-max-element">до</span>
+                <input class="price-max-input" type="number" placeholder="15 000" max="15000" step="100" name="max-price">
               </li>
             </ul>
           </fieldset>
-          <fieldset>
-            <legend>Тип верстки</legend>
+
+          <fieldset class="grid">
+            <legend class="grid-filter">Сетка</legend>
             <ul>
               <li>
                 <label class="option">
@@ -81,8 +93,9 @@
               </li>
             </ul>
           </fieldset>
-          <fieldset>
-            <legend>Особенности:</legend>
+
+          <fieldset class="features">
+            <legend class="features-filter">Особенности:</legend>
             <ul>
               <li>
                 <label class="option">
@@ -121,110 +134,115 @@
               </li>
             </ul>
           </fieldset>
-          <button type="submit">Показать</button>
+
+          <button class="form-btn btn" type="submit">Показать</button>
+
         </form>
-        <div>
-          <p>Сортировать</p>
-          <ul>
-            <li>
+
+        <div class="sorting">
+          <p class="sorting-text">Сортировать</p>
+          <ul class="sorting-list">
+            <li class="sorting-item sorting-price">
               <a href="#price">по цене</a>
             </li>
-            <li>
+            <li class="sorting-item sorting-type">
               <a href="#type">по типу</a>
             </li>
-            <li>
+            <li class="sorting-item sorting-name">
               <a href="#name">по названию</a>
             </li>
           </ul>
-          <ul>
-            <li>
+          <ul class="sorting-direction">
+            <li class="sorting-direction sorting-down">
               <a href="#down" aria-label="вниз">
                 <svg width="11" height="10" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 10L0 0h11" fill="#231F20"/></svg>
               </a>
             </li>
-            <li>
+            <li class="sorting-direction sorting-up">
               <a href="#up" aria-label="вверх">
                 <svg width="11" height="10" fill="DimGrey" stroke="DimGrey" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 0L0 10h11L5.5 0z" fill="#A6A6A6" opacity=".2"/></svg>
               </a>
             </li>
           </ul>
         </div>
-        <ul>
-          <li>
+
+        <ul class="product-list">
+          <li class="product-item">
             <article>
-              <a href="#nowhere">
+              <a class="product-link" href="#nowhere">
                 <img src="img/catalog/sedona.png" width="358" height="578" alt="седона">
               </a>
               <div>
-                <a href="#nowhere">
-                  <h3>SEDONA</h3>
+                <a class="product-link-cite" href="#nowhere">
+                  <h3 class="product-title">SEDONA</h3>
                 </a>
-                <p>Информационный сайт  для туристов</p>
-                <a href="#nowhere">9 900 &#8381;</a>
+                <p class="product-description">Информационный сайт  для туристов</p>
+                <a class="product-link-buy" href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
-          <li>
+          <li class="product-item">
             <article>
-              <a href="#nowhere">
+              <a class="product-link" href="#nowhere">
                 <img src="img/catalog/pink.png" width="358" height="578" alt="сайт пинк">
               </a>
               <div>
-                <h3>Pink App</h3>
-                <p>Продуктовый лендинг приложения для iOS и Android</p>
-                  <a href="#nowhere">9 900 &#8381;</a>
+                <h3 class="product-title">Pink App</h3>
+                <p class="product-description">Продуктовый лендинг приложения для iOS и Android</p>
+                  <a class="product-link-buy" href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
-          <li>
+          <li class="product-item">
             <article>
-              <a href="#nowhere">
+              <a class="product-link" href="#nowhere">
                 <img src="img/catalog/borodinski.png" width="358" height="578" alt="сайт бородинский">
               </a>
               <div>
-                <h3>Barbershop</h3>
-                <p>Сайт салона красоты. Для мужчин, да.</p>
-                <a href="#nowhere">9 900 &#8381;</a>
+                <h3 class="product-title">Barbershop</h3>
+                <p class="product-description">Сайт салона красоты. Для мужчин, да.</p>
+                <a class="product-link-buy" href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
-          <li>
+          <li class="product-item">
             <article>
-              <a href="#nowhere">
+              <a class="product-link" href="#nowhere">
                 <img src="img/catalog/mishka.png" width="358" height="578" alt="сайт вязаных игрушек">
               </a>
               <div>
-                <h3>Mishka</h3>
-                <p>Интернет-магазин  вязаных игрушек</p>
-                <a href="#nowhere">9 900 &#8381;</a>
+                <h3 class="product-title">Mishka</h3>
+                <p class="product-description">Интернет-магазин  вязаных игрушек</p>
+                <a class="product-link-buy" href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
-          <li>
+          <li class="product-item">
             <article>
-              <a href="#nowhere">
+              <a class="product-link" href="#nowhere">
                 <img src="img/catalog/aplus.png" width="358" height="578" alt="сайт A Plus">
               </a>
               <div>
-                <h3>A Plus</h3>
-                <p>Лендинг курсов повышения квалификации</p>
-                <a href="#nowhere">9 900 &#8381;</a>
+                <h3 class="product-title">A Plus</h3>
+                <p class="product-description">Лендинг курсов повышения квалификации</p>
+                <a class="product-link-buy" href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
-          <li>
+          <li class="product-item">
             <article>
-              <a href="#nowhere">
+              <a class="product-link" href="#nowhere">
                 <img src="img/catalog/kvast.png" width="358" height="578" alt="сайт кваст">
               </a>
               <div>
-                <h3>Кваст</h3>
-                <p>Промо-сайт производителя крафтового кваса</p>
-                <a href="#nowhere">9 900 &#8381;</a>
+                <h3 class="product-title">Кваст</h3>
+                <p class="product-description">Промо-сайт производителя крафтового кваса</p>
+                <a class="product-link-buy" href="#nowhere">9 900 &#8381;</a>
               </div>
             </article>
           </li>
         </ul>
+
         <div>
           <ul class="pagination">
             <li class="page-item">
@@ -241,43 +259,50 @@
             </li>
           </ul>
         </div>
+
       </section>
+
     </main>
+
     <footer class="main-footer">
       <div>
-        <div>
+        <div class="map">
           <img src="img/map-marker.png" width="1440" height="416" alt="карта">
         </div>
-        <div>
+        <div class="contacts">
           <p>NЁRDS DESIGN STUDIO</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-          <p>тел. <a href="tel:+78122757575">+7 (812) 275-75-75</a> </p>
-          <a href="#nowhere">Напишите нам</a>
+          <p>тел. <a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a> </p>
+          <a class="contacts-link btn btn-md" href="#nowhere">Напишите нам</a>
         </div>
       </div>
-      <div>
-        <ul>
-          <li>
-            <a href="#nowhere" aria-label="вконтакте">
+      <div class="footer-social">
+        <ul class="footer-social-list">
+          <li class="social-item">
+            <a class="social-link" href="#nowhere" aria-label="вконтакте">
               <svg width="27" height="15" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path d="M16.14 11.51c.95-.3 2.18 2.04 3.48 2.94.98.68 1.73.53 1.73.53l3.47-.05s1.82-.1.96-1.55c-.07-.12-.5-1.07-2.59-3.02-2.17-2.05-1.88-1.71.74-5.25 1.6-2.15 2.24-3.46 2.04-4.02-.2-.54-1.37-.4-1.37-.4L20.7.7c-.38 0-.7.12-.85.52 0 0-.62 1.66-1.45 3.08-1.74 2.99-2.43 3.15-2.72 2.96-.66-.43-.5-1.74-.5-2.67 0-2.9.44-4.1-.84-4.41A6.6 6.6 0 0012.5 0c-1.39-.03-2.57 0-3.24.32-.45.23-.79.72-.58.74.26.04.84.16 1.15.59.4.55.4 1.79.4 1.79s.22 3.41-.55 3.83c-.53.3-1.25-.3-2.8-3.01-.8-1.4-1.4-2.92-1.4-2.92s-.1-.29-.32-.45c-.25-.18-.6-.24-.6-.24L.85.68S.29.7.08.95c-.18.21-.01.66-.01.66s2.9 6.89 6.2 10.35c3.02 3.18 6.46 2.97 6.46 2.97h1.55s.47-.05.7-.31c.23-.24.22-.7.22-.7s-.03-2.1.94-2.41z" fill="#fff"/></svg>
             </a>
           </li>
-          <li>
-            <a href="#nowhere" aria-label="фейсбук">
+          <li class="social-item">
+            <a class="social-link" href="#nowhere" aria-label="фейсбук">
               <svg width="12" height="22" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path d="M12 4V0H8a4 4 0 00-4 4v4H0v4h4v10h4V12h4V8H8V4h4z" fill="#fff"/></svg>
             </a>
           </li>
-          <li>
-            <a href="#nowhere" aria-label="инстаграмм">
+          <li class="social-item">
+            <a class="social-link" href="#nowhere" aria-label="инстаграмм">
               <svg width="21" height="21" fill="black" stroke="black" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M3 0h15a3 3 0 013 3v15a3 3 0 01-3 3H3a3 3 0 01-3-3V3a3 3 0 013-3zm11 10.5a3.5 3.5 0 10-7 0 3.5 3.5 0 007 0zM3 18V9h1.18a6.5 6.5 0 1012.64 0H18v9H3zM14 7h4V3h-4v4z" fill="#fff"/></svg>
             </a>
           </li>
         </ul>
       </div>
-      <p><strong>Давайте дружить, это выгодно!</strong></p>
-      <p>Скидка 10% для друзей из социальных сетей.</p>
+
+      <p class="footer-slogan"><strong>Давайте дружить, это выгодно!</strong></p>
+      <p class="footer-discount">Скидка 10% для друзей из социальных сетей.</p>
+
     </footer>
+
   </body>
+
   </html>
 
   <!-- <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p> -->
