стили внутренней страницы

--- a/catalog.html
+++ b/catalog.html
@@ -176,7 +176,7 @@
                   <a class="product__title" href="#nowhere">
                     <h3>Sedona</h3>
                   </a>
-                  <p class="product__description">Информационный сайт для туристов</p>
+                  <p class="product__description">Информационный сайт <br> для туристов</p>
                   <a class="product__link" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
@@ -187,8 +187,10 @@
                   <img src="img/catalog/pink.png" width="358" height="578" alt="сайт пинк">
                 </a>
                 <div class="product__wrapper">
-                  <h3 class="product__title">Pink App</h3>
-                  <p class="product__description">Продуктовый лендинг приложения для iOS и Android</p>
+                  <a class="product__title" href="#nowhere">
+                    <h3>Pink App</h3>
+                  </a>
+                  <p class="product__description">Продуктовый лендинг <br> приложения для iOS и Android</p>
                     <a class="product__link" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
@@ -199,8 +201,10 @@
                   <img src="img/catalog/borodinski.png" width="358" height="578" alt="сайт бородинский">
                 </a>
                 <div class="product__wrapper">
-                  <h3 class="product__title">Barbershop</h3>
-                  <p class="product__description">Сайт салона красоты. Для мужчин, да.</p>
+                  <a class="product__title" href="#nowhere">
+                    <h3>Barbershop</h3>
+                  </a>
+                  <p class="product__description">Сайт салона красоты.<br> Для мужчин, да.</p>
                   <a class="product__link" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
@@ -211,8 +215,10 @@
                   <img src="img/catalog/mishka.png" width="358" height="578" alt="сайт вязаных игрушек">
                 </a>
                 <div class="product__wrapper">
-                  <h3 class="product__title">Mishka</h3>
-                  <p class="product__description">Интернет-магазин вязаных игрушек</p>
+                  <a class="product__title" href="#nowhere">
+                    <h3>Mishka</h3>
+                  </a>
+                  <p class="product__description">Интернет-магазин <br> вязаных игрушек</p>
                   <a class="product__link" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
@@ -223,8 +229,10 @@
                   <img src="img/catalog/aplus.png" width="358" height="578" alt="сайт A Plus">
                 </a>
                 <div class="product__wrapper">
-                  <h3 class="product__title">A Plus</h3>
-                  <p class="product__description">Лендинг курсов повышения квалификации</p>
+                  <a class="product__title" href="#nowhere">
+                    <h3>A Plus</h3>
+                  </a>
+                  <p class="product__description">Лендинг курсов повышения <br> квалификации</p>
                   <a class="product__link" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
@@ -235,8 +243,10 @@
                   <img src="img/catalog/kvast.png" width="358" height="578" alt="сайт кваст">
                 </a>
                 <div class="product__wrapper">
-                  <h3 class="product__title">Кваст</h3>
-                  <p class="product__description">Промо-сайт производителя крафтового кваса</p>
+                  <a class="product__title" href="#nowhere">
+                    <h3>Кваст</h3>
+                  </a>
+                  <p class="product__description">Промо-сайт производителя <br> крафтового кваса</p>
                   <a class="product__link" href="#nowhere">9 900 &#8381;</a>
                 </div>
               </article>
