--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
             </li>
           </ul>
           <div class="slider__toggles toggles">
-            <button class="toggles__item toggles__item_active" type="button" aria-label="слайд 1"></button>
-            <button class="toggles__item" type="button" aria-label="слайд 2"></button>
-            <button class="toggles__item" type="button" aria-label="слайд 3"></button>
+            <button class="toggles__item toggles__item-active" type="button" aria-label="слайд первый"></button>
+            <button class="toggles__item" type="button" aria-label="слайд второй"></button>
+            <button class="toggles__item" type="button" aria-label="слайд третий"></button>
           </div>
         </div>
       </section>
@@ -102,7 +102,7 @@
                 <img src="img/offer/illustration-2.png" width="300" height="146" alt="иллюстрация смартфона">
               </div>
               <h3 class="offer__title">Приложения</h3>
-              <p class="offer__description">Покорите топ-10 приложений в AppStore и Google Play</p>
+              <p class="offer__description">Покорите топ-10 приложений <br> в AppStore и Google Play</p>
               <a class="offer__btn btn btn__green" href="#nowhere">Заказать</a>
             </li>
             <li class="offers__item offer">
