--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             </li>
           </ul>
           <div class="slider__toggles toggles">
-            <button class="toggles__item toggles__item-active" type="button" aria-label="слайд первый"></button>
+            <button class="toggles__item toggles__item_active" type="button" aria-label="слайд первый"></button>
             <button class="toggles__item" type="button" aria-label="слайд второй"></button>
             <button class="toggles__item" type="button" aria-label="слайд третий"></button>
           </div>
